app/assets/stylesheets/ui-customizations.css.scss
$gold: #d9a300;
$grey: #525252;
$blue: #2c5882;
$whitesmoke: #f5f5f5;
$darkgrey: #555;

@import "fonts.css.scss";

body {
  background: #333;
  background-image: image_url("black-linen.png");
  padding-bottom: 57px;

  &.collections-bg {

    .title-bar.large {
      display:none;
    }

    .banner {
      background-repeat:no-repeat;
      background-size:cover;
      background-position:left top;
      background-image:image_url("home.jpg");
      min-height: 450px;
      position:relative;
      -webkit-box-shadow: 0px 2px 10px 5px rgba(0,0,0,0.65);
      -moz-box-shadow: 0px 2px 10px 5px rgba(0,0,0,0.65);
      box-shadow: 0px 2px 10px 5px rgba(0,0,0,0.65);

      .container {
        width: 100%;
        margin:0 auto;
        padding:60px;

      }

      h1 {
        overflow: hidden;
        width:400px;
        height:0;
        padding-top:166px;
        background-image:image_url("dc.logo.png");
        background-size:cover;
        margin:0;
      }

      h3 {
        overflow: hidden;
        width:200px;
        height:0;
        padding-top:57px;
        background-image:image_url("powered.png");
        background-size:cover;
        position:absolute;
        right:60px;
        bottom:60px;
        margin:0;
      }

      p {
        display: none;
      }
    }
  }

  &.collection {
    .navbar-brand {
      font-size:24px;
      font-weight: 500;
      font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
    }

    .jumbotron {
      box-shadow:none;
      padding-bottom:0;

      h1 {
        display: none;
      }

      p {
        font-size:18px;
      }

      a:hover {
        text-decoration: none;
      }
    }
  }

  &.showcase-bg {
    background-repeat: no-repeat;
    background-size: cover;
    background-position: left 50px;
  }

  &:-webkit-full-screen {
    background-image: image_url("black-linen.png") !important;
    background-repeat: repeat !important;
    background-size: auto !important;
  }

  &:-moz-full-screen {
    background-image: image_url("black-linen.png") !important;
    background-repeat: repeat !important;
    background-size: auto !important;
  }

  &:fullscreen {
    background-image: image_url("black-linen.png") !important;
    background-repeat: repeat !important;
    background-size: auto !important;
  }

  &.modal-open {
    overflow: hidden;
  }
}



h1, h2, h3, h4, h5, h6 {
  margin-top: 0;
}

* {
  box-sizing: border-box;
}

.row {
  margin: 0;
}

.navbar {
  margin: 0;
}

.navbar.navbar, .navbar-default.navbar {
  background-color: transparent;
}

.navbar .navbar-brand {
  height: 50px;
  line-height: 1em;
}

.navbar-nav > li {
  float: left;

  a {
    padding: 15px !important;
  }
}

.title-bar {
  background: -moz-linear-gradient(top, rgba(51, 51, 51, 0.4) 0%, rgba(51, 51, 51, 0.9) 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(51, 51, 51, 0.9)), color-stop(100%, rgba(51, 51, 51, 0.4)));
  background: -webkit-linear-gradient(top, rgba(51, 51, 51, 0.9) 0%, rgba(51, 51, 51, 0.4) 100%);
  background: -o-linear-gradient(top, rgba(51, 51, 51, 0.9) 0%, rgba(51, 51, 51, 0.4) 100%);
  background: -ms-linear-gradient(top, rgba(51, 51, 51, 0.9) 0%, rgba(51, 51, 51, 0.4) 100%);
  background: linear-gradient(to bottom, rgba(51, 51, 51, 0.5) 0%, rgba(51, 51, 51, 0.8) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cc000000', endColorstr='#33000000',GradientType=0 );
  border-bottom: solid 1px #999;
  background: rgba(51, 51, 51, 0.95);
  background: rgba(0, 0, 0, 0.86);
  max-height: 50px;
}

.navbar-default a {
  opacity: .75;
  color: #fff;
}

.navbar-default a:hover {
  opacity: 1;
  text-decoration: underline !important;
}

.navbar-default .title-bar .navbar-brand {
  color: #fff;
  margin-left: 15px;
}

.navbar-collapse {
  position: relative;
  z-index: 0;
}

.navbar-nav {
  bottom: 0;
  margin: 0;
  position: relative;
}

.navbar-right {
  right: 30px;
  left: auto;
  margin-right: 0;
}

.collections-list {
  padding-top:60px;

  .container {
    width:100%;
    padding:0 50px;
  }
}

.showcases-title-bar {
  background: -moz-linear-gradient(top, rgba(51, 51, 51, 0.9) 0%, rgba(51, 51, 51, 0.4) 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(51, 51, 51, 0.4)), color-stop(100%, rgba(51, 51, 51, 0.9)));
  background: -webkit-linear-gradient(top, rgba(51, 51, 51, 0.4) 0%, rgba(51, 51, 51, 0.9) 100%);
  background: -o-linear-gradient(top, rgba(51, 51, 51, 0.4) 0%, rgba(51, 51, 51, 0.9) 100%);
  background: -ms-linear-gradient(top, rgba(51, 51, 51, 0.4) 0%, rgba(51, 51, 51, 0.9) 100%);
  background: linear-gradient(to bottom, rgba(51, 51, 51, 0.9) 0%, rgba(51, 51, 51, 0.4) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cc000000', endColorstr='#33000000',GradientType=0 );
  border-bottom: solid 1px #999;
  position: relative;

  h2 {
    font-size: 16px;
    text-transform: uppercase;
    font-family: GPCMed;
    font-weight: normal;
    padding: 0;
    margin: 0;
    letter-spacing: 1.1px;
  }
}

.collections {
  display: none;
}

.short .collections {
  left: 155px;
  display: block;
  bottom: -1px;
}

.navbar-brand .glyphicon {
  display: none;
}

.navbar-default .title-bar .navbar-nav > li > a {
  color: #fff;
}

.navbar .navbar-nav > li > p {
  padding-top: 15px;
  padding-bottom: 15px;
}

.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
  background: auto;
  color: auto;
}

body .jumbotron, .container .jumbotron, .container-fluid .jumbotron {
  margin-top: -90px;

  border:none;
  background:none;

  .collection-show {
    float: left;
  }

  * {
    color: #fff;
  }
}

.collection-background {
  background-color: none;
  background-size: cover;
  bottom: 0;
  filter: blur(20px);
  left: 0;
  opacity: 0.3;
  position: absolute;
  right: 0;
  top: 50px;
}
/* ... */

